# MachineLearning-DecisionTree

./: LICENSE  README.md  SogouCA.mini.txt  连续数据的决策树.xmind
C++ source Code/: C4.5.cpp  DTreeClass.h  DecisionTree.cpp  DecisionTree.hpp  DecisionTreeMain.cpp  DecitionFunctions.h  pre.csv  tianqi.csv
C++ source Code/Continuous/: CDTree.cpp  CDTree.hpp  CMakeCache.txt  CMakeLists.txt  DtreeMain  Makefile  RFCSV.hpp  cmake_install.cmake  main.cpp
C++ source Code/Discrete/: DTree.cpp  DTree.hpp  haha.csv  haha2.csv  main.cpp  out.yml  pre.csv
C++ source Code/data/: ContinuousTest.csv  ContinuousTrain.csv  ContinuousValid.csv  Newslabel.csv  Newsvector.csv  连续样例数据.csv  连续样例数据.xlsx
Coninuous_DecisionTree/: .~draw.pptx  Readme.md
Continuous_DecisionTree/: draw.pptx
