CMAKE_MINIMUM_REQUIRED(VERSION 2.5)
PROJECT(DTREE CXX)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
SET(CMAKE_BUILD_TYPE "debug")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")

SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}")
SET(LIBRARY_OUTPUT_PATH "${PROJECT_BINARY_DIR}/LIB")

message(STATUS "cmake prefix path : ${CMAKE_PREFIX_PATH}")

INCLUDE_DIRECTORIES(/usr/local/eigen3/)
INCLUDE_DIRECTORIES(./)
AUX_SOURCE_DIRECTORY(./ DIR_SRCS)

ADD_EXECUTABLE(DtreeMain ${DIR_SRCS})

#TARGET_LINK_LIBRARIES(DtreeMain)